[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/img/ammo/bullet.png" type="Texture" id=1]
[ext_resource path="res://scripts/projectiles/TestBullet.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 13.2155

[node name="TestBullet" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.445435, -0.8909 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.44397, 0.110214 )
shape = SubResource( 1 )

[node name="ExpiryTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_TestBullet_area_entered"]
[connection signal="timeout" from="ExpiryTimer" to="." method="_on_ExpiryTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
